--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+    window.addEventListener("error",(e)=>{
+      alert(e.message)
+    })
+    </script>
     <script src="./scripts/tabby_bundle.js"></script>
   </body>
 </html>
