--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,42 @@
     window.addEventListener("error",(e)=>{
       alert(e.message)
     })
+    function setCookie(cname, cvalue, exdays) {
+      const d = new Date();
+      d.setTime(d.getTime() + (exdays*24*60*60*1000));
+      let expires = "expires="+ d.toUTCString();
+      document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+    }
+    function getCookie(cname) {
+      let name = cname + "=";
+      let decodedCookie = decodeURIComponent(document.cookie);
+      let ca = decodedCookie.split(';');
+      for(let i = 0; i <ca.length; i++) {
+        let c = ca[i];
+        while (c.charAt(0) == ' ') {
+          c = c.substring(1);
+        }
+        if (c.indexOf(name) == 0) {
+          return c.substring(name.length, c.length);
+        }
+      }
+      return "";
+    }
+
+    window.chrome.storage = {}
+    window.chrome.storage.sync = {
+      set: function(value){
+        for(var key in value){
+          if(value.hasOwnProperty(key)){
+            setCookie(key, value[key])
+          }
+        }
+        return
+      },
+      get: function(key){
+        return getCookie(key)
+      }
+    }
     </script>
     <script src="./scripts/tabby_bundle.js"></script>
   </body>
